# gecot

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  MakeW64.bat  Makefile  README.md  conanfile.py  conanfile.txt  eca.csv  eca_1.2.csv  eca_1.4.csv  eca_1.6.csv  log  model  model.dec  out.csv  out.json  sol.json  solution.json  test.dec
cmake/: CompilerOptimizations.cmake  CompilerWarnings.cmake  Conan.cmake
include/: instance.hpp  instance_case.hpp  io_helper.hpp  parse_instance copy.hpp  parse_instance.hpp  static_landscape.hpp  trivial_reformulate.hpp
include/gecot/: helper.hpp
include/gecot/concepts/: instance.hpp
include/gecot/indices/: eca.hpp  parallel_eca.hpp  parallel_pc_num.hpp  pc_num.hpp
include/gecot/preprocessing/: compute_big_M_map.hpp  compute_constrained_strong_and_useless_arcs.hpp  compute_contracted_generalized_flow_graph.hpp  compute_contracted_graph.hpp  compute_generalized_flow_graph.hpp  compute_strong_and_useless_arcs.hpp
include/gecot/rankers/: greedy_decremental.hpp  greedy_incremental.hpp  relaxed_mip.hpp  static_decremental.hpp  static_incremental.hpp
include/gecot/solvers/: benders_base.hpp  benders_mip.hpp  benders_mip__.hpp  flow_benders.hpp  greedy_decremental.hpp  greedy_incremental.hpp  mip.hpp  naive_benders.hpp  preprocessed_mip.hpp  random_solution.hpp  static_decremental.hpp  static_incremental.hpp  target_benders.hpp  (+3 more)
include/hexagonify/: geometries.hpp  hexagon_grid.hpp  svg_writer.hpp
include/landscape_opt/: helper.hpp
include/optimize/: instance.hpp  parse_instance.hpp  trivial_reformulate.hpp
include/ranker_interfaces/: abstract_ranker.hpp  greedy_decremental_interface.hpp  greedy_incremental_interface.hpp  mip_interface.hpp  mixed_integer.hpp  relaxed_mip_interface.hpp  static_decremental_interface.hpp  static_incremental_interface.hpp
include/solver_interfaces/: abstract_mip_interface.hpp  abstract_solver.hpp  abstract_solver_interface.hpp  benders_mip_interface.hpp  flow_benders_interface.hpp  greedy_decremental_interface.hpp  greedy_incremental_interface.hpp  mip_interface.hpp  naive_benders_interface.hpp  preprocessed_mip_interface.hpp  static_decremental_interface.hpp  static_incremental_interface.hpp  target_benders_interface.hpp  tree_formulation_rounding_interface.hpp  unprep_target_benders_interface.hpp  worst_greedy_decremental_interface.hpp
installer_and_instances/: README.md  display_solution.py  generate_instance.py  input_data.py
misc/: PathPatch.xml  gecot.xcf  gecot_header.xcf  gecot_icon.rc  gecot_title.xcf  linux_licenses.txt  mingw_gcc13  nsis_gecot_header.xcf  windows_license.txt  windows_licenses.txt  wix_gecot_banner.xcf  wix_gecot_dialog.xcf
src/: bpo_utils.hpp  gecot_hexagonify copy.cpp  gecot_hexagonify.cpp  gecot_optimize.cpp  gecot_rank_options.cpp  instance.cpp  instance.hpp  instance_case.hpp  landscape.hpp  optimize.cpp  parse_instance.cpp  parse_instance.hpp  po_utils.hpp  rank.cpp  rank_options.cpp  solve.cpp  static_landscape.hpp  test.cpp
src/landscape_opt/: helper.hpp
src/ranker_interfaces/: abstract_ranker.hpp  greedy_decremental_interface.hpp  greedy_incremental_interface.hpp  mip_interface.hpp  static_decremental_interface.hpp  static_incremental_interface.hpp
src/solver_interfaces/: abstract_solver.hpp  greedy_decremental_interface.hpp  greedy_incremental_interface.hpp  mip_interface.hpp  static_decremental_interface.hpp  static_incremental_interface.hpp
test/: CMakeLists.txt  PC1.tif  arc_options.csv  arcs.csv  instance.json  main_test.cpp  node_options.csv  nodes.csv  options.csv  output.csv  parse_instance_test.cpp  preprocessing_helper.hpp  preprocessing_test.cpp  test.cpp
test/instances/: Herissons.csv  aude.json  aude2.json  biorevaix.json  biorevaix_N1.json  biorevaix_N2.json  quebec_438_RASY.json  schema.json  test.json
test/instances/Aix/: N2.json  arc_options.csv  arcs.csv  display_solution.py  generate_instance.py  map.tiff  stretches.csv  vertices.csv
test/instances/Aix/N1/: arc_options.csv  stretches.csv  vertex_options.csv
test/instances/Aix/N2/: arc_options.csv  arcs.csv  stretches.csv  vertices.csv
test/instances/Aix/instance_30x30/: arcs.csv  arcs_improvements.csv  options.csv  vertices.csv  vertices_improvements.csv
test/instances/Aix/instance_40x40/: arcs.csv  arcs_improvements.csv  instance.json  options.csv  vertices_improvements.csv
test/instances/Aix/instance_70x70/: arcs_improvements.csv  options.csv
test/instances/Aix/raw/: AL_N2.csv  croisemt_troncon_hexagN2.txt  generate.py  generate_N1.py  generate_N2.py  generate_new_N.py  generate_new_N1_instance.py  generate_new_N2_instance.py  generate_new_instances.py  vertexN2_v7.csv
test/instances/Aix/results/: area4_N1_static_incr.csv  area4_N2_static_incr.csv  full_N1_static_incr.csv  full_N2_static_incr.csv
test/instances/Aude/: arcs.csv  aude.json  dams.csv  dams_arcs.csv  generate.py  instance.json  stretches.csv
test/instances/Aude/raw/: generate.py
test/instances/BioRevAix/: Herissons.csv  N1.json
test/instances/BioRevAix/N1/: arc_options.csv  stretches.csv  vertex_options.csv
test/instances/BioRevAix/N2/: arc_options.csv  arcs.csv  stretches.csv  vertices.csv
test/instances/BioRevAix/raw/: AL_N2.csv  croisemt_troncon_hexagN2.txt  generate_N2.py  generate_new_N.py  generate_new_N1_instance.py  vertexN2_v7.csv
test/instances/BioRevAix/results/: full_N1_static_incr.csv  full_N2_static_incr.csv
test/instances/Quebec_438_RASY/: arcs.csv  arcs_options.csv  instance.json  options.csv  vertices.csv  vertices_options.csv
test/instances/paper/: arc_options.csv  arcs.csv  instance.json  options.csv  vertex_options.csv  vertices.csv
test/instances/raster/: arc_options.csv  arcs.csv  instance.json  options.csv  tiff_to_instance.ipynb
test/instances/raster/instance_40x40/: arcs.csv  vertices.csv
test/instances/test/: arcs.csv  arcs_improvements.csv  instance.json  options.csv  vertices.csv  vertices_improvements.csv
test/instances/worst/: arcs.csv  arcs_improvements.csv  instance.json  options.csv  vertices.csv
(+78 files in other folders)
